crates/runtime/tests/search/snapshots/integration_models__search__cayenne-no_vector_engine-dataset-vector_search_metadata_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer, Int64(4)).id ASC NULLS LAST                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer, Int64(4)).id, trunc(vector_search(qs, Utf8("secondary"), answer, Int64(4))._score, Int64(3)) AS _score                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer, Int64(4)) projection=[id, _score], full_filters=[vector_search(qs, Utf8("secondary"), answer, Int64(4)).subject != Utf8("math")]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| physical_plan | SortPreservingMergeExec: [_score@1 DESC, id@0 ASC NULLS LAST]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |   SortExec: expr=[_score@1 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |     ProjectionExec: expr=[id@0 as id, trunc(_score@1, 3) as _score]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |       SortExec: TopK(fetch=4), expr=[_score@1 DESC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |         ProjectionExec: expr=[id@0 as id, 1 - cosine_distance([0.0910044, 0.28404197, -0.22667387, 0.11321324, -0.23644122, -0.1680845, -0.01922243, 0.048883688, 0.13857421, -0.06076504, -0.023252578, 0.029877668, -0.078260496, -0.021779602, -0.07507141, 0.013583361, 0.07562329, 0.009830534, 0.14070275, -0.19246486, -0.39109272, 0.12150605, 0.021778228, 0.003122387, -0.03356213, -0.0301475, 0.02045131, -0.099953234, 0.03768152, 0.20249407, 0.088543065, -0.10339331, 0.1472623, 0.092206456, 0.062065277, 0.1274912, -0.038439333, 0.019897979, 0.14781311, 0.023069842, -0.08277967, 0.1005315, -0.05718733, 0.053503454, -0.12699182, 0.07569228, 0.075779825, -0.094936386, 0.040362723, -0.20799404, 0.017441744, -0.15113135, 0.10224226, 0.08180355, -0.106704235, 0.32311952, 0.13004488, 0.041729283, -0.15398379, -0.04270725, 0.1261294, -0.102203555, -0.10389768, -0.048571132], CAST(answer_embedding@2 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |           SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |             CayenneAccelerationExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |               BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |                   DataSourceExec: file_groups={1 group: [[<NORMALIZED_PATH>/.vortex]]}, projection=[id, subject, answer_embedding], file_type=vortex, predicate: subject@3 != math                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
